--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
     <h3><%= link_to article.title, article.url %></h3>
     <p>
       <%= render 'shared/byline', votable: article %>
-      | <%= link_to pluralize(article.comments.count, 'comment'), article_comments_path(article) %>
+      | <%= link_to pluralize(article.comments.size, 'comment'), article_comments_path(article) %>
     </p>
   </div>
 <% end %>
